# coreml_converter

./: .gitignore  pyproject.toml
converter/: __main__.py
coreml_converter/: __main__.py  const.py  convert.py  converter.py  loader.py  optimizer.py  runner.py
coreml_converter/models/: available_models.py  constants.py  intent_model.py  models.py
src/coreml_converter/: __main__.py  const.py  converter.py  runner.py
src/coreml_converter/models/: const.py  gstep_model.py  intent_model.py  keyword_model.py  models.py
