[project]
name = "coreml_converter"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Junnos", email = "junnos.dev@gmail.com" }]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
converter = { path = ".", editable = true }

[tool.pixi.system-requirements]
linux = "5.4.0"

[tool.pixi.tasks]
convert = "python -m coreml_converter"

[tool.pixi.dependencies]
python = "<=3.11.9"
pip = ">=24.0,<25"
transformers = ">=4.41.1,<4.42"
tqdm = ">=4.66.4,<4.67"

[tool.setuptools.packages.find]
where = ["."]
include = ["coreml_converter"]
exclude = ["weights"]
